[package]
name = "falchion"
version = "0.1.0"
authors = ["skippi <jbtcao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
read-process-memory = "^0.1"
rodio = "^0.11"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sysinfo = "^0.14"
